ДЗ Показ элементов при прокрутке

--- a/dom/reveal/task.html
+++ b/dom/reveal/task.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Отображение элементов</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
+            <a href="https://netology.ru/" class="logo__link"></a>
         </div>
         <h1 class="header__title">
             Домашнее задание к занятию 2.1 «DOM». Появление элементов при прокрутке.
@@ -27,7 +28,8 @@
     <div>Maxime, recusandae magnam. Voluptates optio voluptatum illo corporis, non porro molestias ut! Quam est incidunt nulla corrupti mollitia sapiente, assumenda repudiandae inventore corporis deserunt, atque dolorum consequatur voluptatum officiis eos!</div>
     <div>Delectus et unde voluptate cum, quidem sunt molestias, impedit harum blanditiis consectetur tempora minima, voluptas dicta culpa. Culpa, sit amet quae, perspiciatis incidunt quo iure maiores! Ratione, neque enim laboriosam.</div>
     <div>Ipsum, rem sequi facilis dolore sunt alias repellendus exercitationem debitis soluta quaerat, architecto saepe quas atque, praesentium reiciendis voluptatum odio doloribus optio. Tempora magni, voluptates in veritatis ipsum saepe inventore.</div>
-    <div>Accusantium possimus molestiae facilis explicabo magnam, laudantium cupiditate itaque, facere totam excepturi cumque quibusdam, veniam atque repudiandae maxime perspiciatis neque placeat tempore similique. Quisquam nisi tempore quaerat, quae iure culpa.</div>
+    <div>Accusantium possimus molestiae facilis explicabo magnam, laudantium cupiditate itaque, facere totam excepturi cumque quibusdam, veniam atque repudiandae maxime perspiciatis neque placeat tempore similique. Quisquam nisi tempore quaerat, quae iure
+        culpa.</div>
     <div>Enim quam corporis ipsam aspernatur soluta velit deserunt harum a ratione, magnam quisquam officia, commodi provident cupiditate facilis expedita nobis at explicabo? Doloremque unde odio cum maxime minus, quam sint.</div>
     <div>Magnam, nisi ex consectetur, quas enim provident quam impedit delectus quisquam laborum neque fuga doloribus consequatur! Repellat facilis ipsum cupiditate esse eaque officiis reiciendis voluptates temporibus! Labore nulla laborum, iure.</div>
     <div>Asperiores possimus fuga ratione cumque animi unde officia nam nobis molestiae quis, eveniet, libero saepe! Nulla voluptatem quisquam commodi corrupti, suscipit ad nostrum. Tempore eos obcaecati ab, odio magni est.</div>
@@ -130,13 +132,15 @@
     <div>Numquam adipisci nemo earum corporis accusantium reiciendis laboriosam quas vel fuga facere, saepe nostrum dolores quasi nihil doloremque suscipit atque! Quo dolorum deleniti quos molestias magnam ex consequatur iusto laborum.</div>
     <div>Debitis unde voluptas cum ab. Ex, nostrum nulla sunt, alias debitis accusamus molestias saepe voluptate recusandae aut voluptates, placeat tempora iure mollitia doloribus suscipit. Repellat recusandae enim consequatur voluptatibus natus.</div>
     <div>Tempore quod qui quasi, architecto natus aliquid impedit eveniet culpa recusandae ut, dicta neque. Voluptas dicta totam nobis hic, quia voluptate quibusdam, at veritatis ipsam fuga dolore fugiat doloribus sint.</div>
-    <div>Temporibus, dolores. A reprehenderit officia, dolor ducimus sed eius maxime quibusdam tenetur non! Officiis, exercitationem tenetur aperiam officia illo laudantium delectus itaque voluptatem praesentium maxime deserunt repudiandae. Repellendus, possimus nisi.</div>
+    <div>Temporibus, dolores. A reprehenderit officia, dolor ducimus sed eius maxime quibusdam tenetur non! Officiis, exercitationem tenetur aperiam officia illo laudantium delectus itaque voluptatem praesentium maxime deserunt repudiandae. Repellendus, possimus
+        nisi.</div>
     <div>Eaque culpa sit animi similique porro maiores labore ut nam a asperiores error alias nobis, reiciendis, praesentium. Adipisci dicta nobis repellendus consequuntur quaerat, nihil, est, eum ullam, fuga debitis numquam.</div>
     <div>Aliquam facilis quae laudantium, deleniti sed in cum nisi ut obcaecati sint id dolor nam illo et fuga itaque impedit odit recusandae nostrum non quos! Asperiores aspernatur consequuntur neque quo.</div>
     <div>Obcaecati mollitia accusamus delectus, adipisci debitis porro fuga natus veritatis non quaerat ad sed beatae, explicabo. Velit asperiores veritatis deleniti nobis repudiandae qui, eius totam suscipit reprehenderit vitae tempora est.</div>
     <div>Similique optio architecto, iure magni hic reiciendis doloribus ad officia? Alias nihil aliquid, omnis exercitationem doloremque fugit officiis laudantium. Maiores molestias maxime, dolores eius! Aut rerum quo voluptates, quasi est.</div>
     <div>Quod quae architecto voluptatibus, aspernatur tenetur assumenda, reprehenderit vero eius libero sunt illum culpa labore, ducimus ipsa maiores vel sequi quaerat quos tempora nihil deserunt odit, suscipit consectetur? Nam, error.</div>
-    <div>Error non voluptate, illum temporibus voluptates consectetur molestiae dolorem officia nesciunt voluptatum ea dignissimos, vitae assumenda obcaecati consequatur soluta, voluptas, ad corrupti asperiores omnis necessitatibus esse nisi laborum! Deserunt, incidunt.</div>
+    <div>Error non voluptate, illum temporibus voluptates consectetur molestiae dolorem officia nesciunt voluptatum ea dignissimos, vitae assumenda obcaecati consequatur soluta, voluptas, ad corrupti asperiores omnis necessitatibus esse nisi laborum! Deserunt,
+        incidunt.</div>
     <div>Laboriosam distinctio, aut, consequatur impedit rem adipisci illum quo, quis animi nihil blanditiis assumenda eum modi iure eius. Officia expedita asperiores repellat, voluptate nobis facere, quis non ducimus quae ratione.</div>
     <div>Corrupti voluptate provident, necessitatibus ex similique vel optio aliquid, incidunt vitae. Provident aliquam accusantium laborum dolor quo minus commodi nobis soluta ipsum expedita, iste beatae sed temporibus id, molestias voluptas!</div>
     <div>Maxime sequi quas, ducimus culpa. Dolorum magni alias corporis ipsam odio accusantium perspiciatis inventore voluptas quaerat velit a temporibus sequi, laborum modi ratione tenetur qui excepturi recusandae! Cum, sequi, nesciunt!</div>
@@ -252,15 +256,18 @@
     <div>Minima, saepe soluta nostrum. Modi eaque porro sunt, delectus aliquid accusantium neque. Assumenda ipsum qui voluptate reiciendis, illum, maxime magnam laudantium cum incidunt officia non placeat corporis accusamus numquam nihil.</div>
     <div>Deserunt maiores, alias ipsum distinctio ullam fugit, molestiae eius fugiat. Eos mollitia, tempora voluptatum vel fugit, maiores, necessitatibus dolores nisi, in officiis quidem a numquam eum debitis. Quisquam, similique eum.</div>
     <div>Labore veniam provident velit, distinctio impedit, facere aspernatur necessitatibus incidunt excepturi modi amet eius! Placeat sed soluta non, accusantium tempore dolor dolorem cum vero eos, nam sequi fugit, necessitatibus libero.</div>
-    <div>Nisi inventore fuga doloremque sapiente architecto voluptas quia deleniti, commodi recusandae necessitatibus molestias. Expedita, temporibus quas consequuntur deleniti, neque quo adipisci, voluptate velit quis vitae magni. Reiciendis, excepturi repellendus suscipit!</div>
+    <div>Nisi inventore fuga doloremque sapiente architecto voluptas quia deleniti, commodi recusandae necessitatibus molestias. Expedita, temporibus quas consequuntur deleniti, neque quo adipisci, voluptate velit quis vitae magni. Reiciendis, excepturi repellendus
+        suscipit!</div>
     <div>Ipsum culpa veritatis tenetur, minima perspiciatis eius praesentium blanditiis veniam iusto illum vel accusantium magnam sed animi non velit rerum aliquam architecto dolores voluptate ducimus, vitae! Quis obcaecati maxime officia.</div>
     <div>Maxime quas, delectus nisi voluptas minus repudiandae provident vero ex, nihil quo debitis numquam non repellat eligendi? Est quia fugit quidem, dicta, ullam laboriosam ad alias odit vel laborum inventore.</div>
     <div>Recusandae delectus quidem voluptas libero neque ipsum deleniti natus, id, eos nesciunt, quasi minima totam repellendus maiores adipisci soluta. Distinctio quasi repudiandae voluptates et nobis consequuntur culpa mollitia quis voluptatum!</div>
     <div>Suscipit excepturi officia alias et pariatur repellat, minus, ipsam vel itaque dolorum aliquid maiores numquam magnam, molestiae maxime. Quibusdam corrupti recusandae ratione repellendus nesciunt explicabo consequatur nemo facere velit dignissimos.</div>
-    <div>Repudiandae dolore dolorum laudantium molestiae provident aspernatur maxime, ipsa amet dolor in, voluptatem nesciunt non perspiciatis laborum corporis, dolorem officia laboriosam harum necessitatibus quam ex dignissimos voluptatum eligendi explicabo. Magnam.</div>
+    <div>Repudiandae dolore dolorum laudantium molestiae provident aspernatur maxime, ipsa amet dolor in, voluptatem nesciunt non perspiciatis laborum corporis, dolorem officia laboriosam harum necessitatibus quam ex dignissimos voluptatum eligendi explicabo.
+        Magnam.</div>
     <div>Impedit voluptate perspiciatis, quo ut esse, quidem, repudiandae nisi corrupti ipsam et minima doloribus voluptatibus nobis provident veritatis. Ducimus dignissimos quod in hic possimus incidunt saepe sequi ad? Doloremque, aspernatur?</div>
     <div>Architecto minima accusantium, illum. Nulla iusto magnam hic dolores ab distinctio neque maiores. Minima sed assumenda accusamus vel, quam repellat at suscipit dolorem corporis architecto nulla doloremque pariatur sit odio!</div>
-    <div>Quaerat nobis explicabo mollitia nesciunt! Doloremque libero, fugiat modi exercitationem culpa obcaecati eius maxime eos doloribus magni voluptatem dolores sequi necessitatibus. Culpa delectus, similique aspernatur corporis facilis asperiores velit rerum?</div>
+    <div>Quaerat nobis explicabo mollitia nesciunt! Doloremque libero, fugiat modi exercitationem culpa obcaecati eius maxime eos doloribus magni voluptatem dolores sequi necessitatibus. Culpa delectus, similique aspernatur corporis facilis asperiores velit
+        rerum?</div>
     <div>Quae, praesentium consequuntur nihil soluta asperiores illo accusantium, nesciunt? Quisquam harum omnis culpa ducimus labore laudantium natus accusamus, consequatur, nesciunt minima molestias. Dicta id assumenda cupiditate saepe dolores sed autem.</div>
     <div>Maiores officia non atque fuga assumenda tenetur. Nostrum ratione animi, dolor reiciendis, sint laudantium maiores iste asperiores aliquam consequuntur ducimus. Perferendis dolorem, autem reprehenderit. Id cupiditate enim optio soluta ab.</div>
     <div>Ullam ratione, necessitatibus rem minima id amet, blanditiis, est dolores numquam architecto quos! Hic nostrum, et ab cum error neque eius soluta suscipit ducimus omnis enim possimus! Facilis, aliquid, iste.</div>
@@ -271,4 +278,5 @@
     <div>Error voluptate assumenda distinctio, neque totam veritatis ad voluptatibus doloribus aspernatur nesciunt repudiandae eum asperiores esse incidunt tempora labore a eveniet impedit quasi voluptas reiciendis provident optio minima. Aperiam, quo!</div>
     <script src="task.js"></script>
 </body>
+
 </html>
